k8s/talos/apps/gluetun-vpn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gluetun
  namespace: gluetun-vpn
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
  hostnames:
    - gluetun.local.bigd.no
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gluetun
          port: 8000
          weight: 1
